--- a/team.html
+++ b/team.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" style="" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="M_Adnan">
-<title>Texas Crypto - Austin, TX</title>
+<title>Texas Crypto - Our Team</title>
 
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +18,22 @@
 
 <!-- JavaScripts -->
 <script src="js/modernizr.js"></script>
+<style>
+header {
+	background-color: #24292e;
+}
+h8 {
+	font-weight: normal;
+	font-size: 20px;
+	margin:10px 0 0 0;
+}
 
+h9{
+	font-size: 14px;
+	font-weight: lighter;
+	margin-top: 5px;
+}
+</style>
 <!-- Online Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -74,18 +87,18 @@
 <div id="wrap">
 
   <!-- header -->
-  <header class="sticky">
+  <div id="undefined-sticky-wrapper" class="sticky-wrapper" style="height: 107px;"><header class="sticky" style="">
     <div class="container">
 
       <!-- Logo -->
-      <div class="logo"> <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="" ></a> </div>
+      <div class="logo"> <a href="index.html"><img class="img-responsive" src="images/logo.png" alt=""></a> </div>
       <nav class="navbar ownmenu navbar-expand-lg ">
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span><i class="fas fa-bars"></i></span> </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav">
-            <li class="scroll active"><a href="index.html">Home</a></li>
-            <li class="scroll"> <a href="#about">About </a> </li>
-			<li class="scroll"> <a href="team.html">Team</a> </li>
+            <li class="scroll"><a href="index.html">Home</a></li>
+            <li class="scroll"> <a href="index.html#about">About </a> </li>
+			<li class="scroll active"> <a href="team.html">Team</a> </li>
             <li class="scroll"> <a href="projects.html">Projects</a> </li>
             <li class="scroll"> <a href="https://utexas.campuslabs.com/engage/actioncenter/organization/texascrypto">Activity</a> </li>
             <li class="scroll"> <a href="https://utexas.campuslabs.com/engage/organization/texascrypto">Join</a> </li>
@@ -95,36 +108,13 @@
       </nav>
     </div>
     <div class="clearfix"></div>
-  </header>
+  </header></div>
 
   <!-- HOME MAIN -->
   <section class="simple-head" data-stellar-background-ratio="0.5" id="hme">
     <!-- Particles -->
-    <div id="particles-js"></div>
-    <div class="position-center-center cont-left">
-      <div class="container">
-        <div class="row">
+    <div id=""></div>
 
-          <!-- Left Section -->
-          <div class="col-md-7">
-            <h1 style="font-size: 48px; font-weight: 700;">Texas Crypto</h1>
-			<h1 style="font-size: 28px;">vires numeris</h1>
-						<a href="#about" class="btn">Learn more</a>
-            <a href="https://utexas.campuslabs.com/engage/organization/texascrypto" class="btn btn-inverse">Join</a> </div>
-
-          <!-- Text Section -->
-          <div class="col-md-5">
-            <div class="distri">
-              <h6>Call us any time to schedule an appointment or chat</h6>
-              <!-- Progress -->
-              <div class="progress">
-				  <p style="margin-left: 42px; margin-top: 2px; color: black; font-weight: 700;"><a href="tel:2814755914">+1 (281) 475-5914</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- Content -->
@@ -133,48 +123,44 @@
     <!-- Why Choose Us -->
     <section class="why-choose padding-top-100 padding-bottom-100" id="about">
       <div class="container">
-
+<div class="col-md-5 text-right" style="float: right;"> <img src="https://photos-images.active.com/file/3/1/original/78/35/7835384e-2d09-427c-95e3-879e7292a01f.png" alt="Why Choose Us Image" > </div>
         <!-- Why Choose Us  ROW-->
         <div class="row">
           <div class="col-md-7 margin-top-60">
-
+					<br>
             <!-- Tittle -->
             <div class="heading margin-bottom-20">
-              <h6 class="margin-bottom-10">Paving the path for Texas' blockchain revolution</h6>
-              <h4>Texas Crypto</h4>
+              <!--<h6 class="margin-bottom-10">Now is the best time to get involved with Texas Crypto in Austin!</h6>-->
+              <h4>Our Team</h4>
             </div>
-            <p>Texas Crypto is a student-run tech organization at The University of Texas at Austin with the purpose of facilitating the professional development of Blockchain technology across Austin and Texas, as well as educating the general public about the basics of Blockchain, its practical uses, and its long-term implications on both the tech industry and global economy.</p>
-            <p>Sound interesting? Learn how to get <a href="#involved!"><u>involved</u>!</a></p><hr>
-            <a class="vid-btn margin-top-30 popup-youtube" href="https://www.youtube.com/watch?v=Pl8OlkkwRpc"><i class="fas fa-play-circle"></i> Watch Video <br>
-            <span>How it works</span></a> </div>
-
-          <!--
-          <div class="col-md-5 text-right"> <img src="https://photos-images.active.com/file/3/1/original/78/35/7835384e-2d09-427c-95e3-879e7292a01f.png" alt="Why Choose Us Image" > </div>-->
+						<div>
+							<div class="col-lg-8 col-md-8">
+								<h8>Dan T.</h8><br>
+								<h9>President</h9><br>
+								<p>Student and Jewelz </p>
+							</div>
+							<hr>
+							<div class="col-lg-8 col-md-8">
+								<h8>Dylan M.</h8><br>
+	              <h9>Founder</h9><br>
+	              <p>Blockchain extraordinaire<br>(+1 281-475-5914)
+							</div>
+							<hr>
+							<div class="col-lg-8 col-md-8">
+								<h8>Nick E.</h8><br>
+								<h9>Secretary</h9><br>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>!-->
+							</div>
+							<hr>
+							<div class="col-lg-8 col-md-8">
+								<h8>Emily C.</h8><br>
+								<h9>Event Coordinator</h9><br>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>!-->
+							</div>
+						</div>
 			  </div>
-
-        <!-- Services ROW -->
-        <div class="row">
-
-
-          <!-- Services -->
-          <div class="col-md-4">
-            <div class="ib-icon"> <i class="flaticon-smartphone"></i> </div>
-            <div class="ib-info">
-              <h4 class="h6">Newcomers</h4>
-              <p>If you or your friends are interested in Texas Crypto or just want to ask a random question, you are always welcomed. We encourage students of all different levels of experience to <a href="https://utexas.campuslabs.com/engage/organization/texascrypto">join</a> or <a href="#drop">stop by</a>.</p>
-            </div>
-          </div>
-
-          <!-- Services -->
-          <div class="col-md-4">
-            <div class="ib-icon"> <i class="flaticon-flat-world-map"></i> </div>
-            <div class="ib-info">
-              <h4 class="h6">Gurus</h4>
-              <p>Even if you already know a great deal about blockchain technology, nobody knows everything! Stop by one day and share your knowledge with an interested and ambitious crowd of students, or listen to our discussion about current events. We strive to connect everyone to enhance our groups collective knowledge in hopes of doing <a href="projects.html"><u>great things</u></a> with us.</p>
-            </div>
-          </div>
       </div>
-    </section>
+    </div></section>
     <!-- dan version
 
     <section class="distri padding-top-100 padding-bottom-100 light-bg" id="projects">
@@ -327,7 +313,7 @@
 			          <a href="http://makro.id/sistem-oss-resmi-diluncurkan" class="align-self-end">
 			        	<span class="badge">Industri</span>
 			            <h4 class="card-title">Sistem OSS Resmi Diluncurkan</h4>
-			            <p class="textfeat" style="display: none;">makro.id - Menteri Koordinator Bidang Perekonomian Darmin Nasution bersama dengan para menteri dan kepala lembaga terkait meresmikan penerapan Sistem Online Single Submission (OSS). 
+			            <p class="textfeat" style="display: none;">makro.id - Menteri Koordinator Bidang Perekonomian Darmin Nasution bersama dengan para menteri dan kepala lembaga terkait meresmikan penerapan Sistem Online Single Submission (OSS).&nbsp;
 
 	Layanan Perizinan Berusaha Terintegrasi Secara Elektronik (PBTSE), yang</p>
 			          </a>
@@ -442,7 +428,7 @@
             <div class="news-letter">
               <h2>Stay updated on our events and news</h2>
               <form>
-                <input type="email" placeholder="Enter your email address" required>
+                <input type="email" placeholder="Enter your email address" required="">
                 <button type="submit">SEND</button>
               </form>
             </div>
@@ -463,5 +449,6 @@
 <script src="js/jquery.sticky.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/main.js"></script>
-</body>
-</html>
+
+
+</body></html>
