fixed the about page

--- a/team.html
+++ b/team.html
@@ -97,7 +97,7 @@ h9{
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav">
             <li class="scroll"><a href="index.html">Home</a></li>
-            <li class="scroll"> <a href="index.html#about">About </a> </li>
+            <li class="scroll"> <a href="index.html">About </a> </li>
 			<li class="scroll active"> <a href="team.html">Team</a> </li>
             <li class="scroll"> <a href="projects.html">Projects</a> </li>
             <li class="scroll"> <a href="https://utexas.campuslabs.com/engage/actioncenter/organization/texascrypto">Activity</a> </li>
