fixed the team data

--- a/team.html
+++ b/team.html
@@ -137,13 +137,13 @@ h9{
 							<div class="col-lg-8 col-md-8">
 								<h8>Dan T.</h8><br>
 								<h9>President</h9><br>
-								<p>Student and Jewelz </p>
+								<p>Student and business developer | <a href="mailto:dan@texascrypto.org">dan@texascrypto.org</a></p>
 							</div>
 							<hr>
 							<div class="col-lg-8 col-md-8">
 								<h8>Dylan M.</h8><br>
 	              <h9>Founder</h9><br>
-	              <p>Blockchain extraordinaire<br>(+1 281-475-5914)
+	              <p>Blockchain extraordinaire<br>(<a href="tel:12814755914">+1 281-475-5914</a>)
 							</div>
 							<hr>
 							<div class="col-lg-8 col-md-8">
