fixed team and google tracking

--- a/team.html
+++ b/team.html
@@ -34,6 +34,15 @@ h9{
 	margin-top: 5px;
 }
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134233951-1"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-134233951-1');
+</script>
 <!-- Online Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -126,7 +135,7 @@ h9{
 <div class="col-md-5 text-right" style="float: right;"> <img src="https://photos-images.active.com/file/3/1/original/78/35/7835384e-2d09-427c-95e3-879e7292a01f.png" alt="Why Choose Us Image" > </div>
         <!-- Why Choose Us  ROW-->
         <div class="row">
-          <div class="col-md-7 margin-top-60">
+          <div class="col-md-36 margin-top-40">
 					<br>
             <!-- Tittle -->
             <div class="heading margin-bottom-20">
@@ -134,25 +143,25 @@ h9{
               <h4>Our Team</h4>
             </div>
 						<div>
-							<div class="col-lg-8 col-md-8">
+							<div class="col-lg-24 col-md-24">
 								<h8>Dan T.</h8><br>
 								<h9>President</h9><br>
 								<p>Student and business developer | <a href="mailto:dan@texascrypto.org">dan@texascrypto.org</a></p>
 							</div>
 							<hr>
-							<div class="col-lg-8 col-md-8">
+							<div class="col-lg-24 col-md-24">
 								<h8>Dylan M.</h8><br>
 	              <h9>Founder</h9><br>
 	              <p>Blockchain extraordinaire<br>(<a href="tel:12814755914">+1 281-475-5914</a>)
 							</div>
 							<hr>
-							<div class="col-lg-8 col-md-8">
+							<div class="col-lg-24 col-md-24">
 								<h8>Nick E.</h8><br>
 								<h9>Secretary</h9><br>
 								<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>!-->
 							</div>
 							<hr>
-							<div class="col-lg-8 col-md-8">
+							<div class="col-lg-24 col-md-24">
 								<h8>Emily C.</h8><br>
 								<h9>Event Coordinator</h9><br>
 								<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>!-->
