--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 		padding: 0 !important;
 	}
 	</style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134233951-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-134233951-1');
+	</script>
 </head>
 <body>
 
