--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,15 @@ h9{
 		padding: 0 !important;
 	}
 	</style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134233951-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-134233951-1');
+	</script>
 </head>
 <body>
 
