--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           <div class="col-md-4">
             <div class="ib-icon"> <i class="flaticon-smartphone"></i> </div>
             <div class="ib-info">
-              <h4 class="h6">Newcomers</h4>
-              <p>If you or your friends are interested in Texas Crypto or just want to ask a random question, you are always welcomed. We encourage students of all different levels of experience to <a href="https://utexas.campuslabs.com/engage/organization/texascrypto">join</a> or <a href="#drop">stop by</a>.</p>
+              <h4 class="h6">Students</h4>
+              <p>Whether you are an entrepreneur looking to scale a startup idea, a developer looking for a community to share ideas with, or a student intrigued by the workings of Blockchain technology, we encourage you to reach out, share your thoughts, and <a href="https://utexas.campuslabs.com/engage/organization/texascrypto" target="_blank">join</a> our outstanding community of developers and enthusiasts.</p>
             </div>
           </div>
 
@@ -178,8 +178,8 @@
           <div class="col-md-4">
             <div class="ib-icon"> <i class="flaticon-flat-world-map"></i> </div>
             <div class="ib-info">
-              <h4 class="h6">Gurus</h4>
-              <p>Even if you already know a great deal about blockchain technology, nobody knows everything! Stop by one day and share your knowledge with an interested and ambitious crowd of students, or listen to our discussion about current events. We strive to connect everyone to enhance our groups collective knowledge in hopes of doing <a href="projects.html"><u>great things</u></a> with us.</p>
+              <h4 class="h6">Companies & SMBs</h4>
+              <p>If you are a business looking to modernize/secure your day-to-day operations and are considering the implementation of a Blockchain-based solution, consult us at <a href="mailto:contact@texascrypto.org" target="_blank">contact@texascrypto.org</a>, and we will draw out a plan/business model best suited for your specific business. We look forward to the challenges and opportunities of exploring the frontier of Blockchain application in all types of businesses, especially startups and SMBs.</p>
             </div>
           </div>
       </div>
