--- a/team.html
+++ b/team.html
@@ -144,15 +144,15 @@ h9{
             </div>
 						<div>
 							<div class="col-lg-24 col-md-24">
-								<h8>Dan T.</h8><br>
+								<h8>Dan T. Huynh</h8><br>
 								<h9>President</h9><br>
-								<p>Student and business developer | <a href="mailto:dan@texascrypto.org">dan@texascrypto.org</a></p>
+								<p>Student and business developer  <a href="mailto:dan@texascrypto.org">dan@texascrypto.org</a></p>
 							</div>
 							<hr>
 							<div class="col-lg-24 col-md-24">
-								<h8>Dylan M.</h8><br>
+								<h8>Dylan M. Mulrooney</h8><br>
 	              <h9>Founder</h9><br>
-	              <p>Blockchain extraordinaire<br>(<a href="tel:12814755914">+1 281-475-5914</a>)
+	              <p>CS student, experienced Blockchain developer<br>(<a>+1 281-475-5914</a>)</p>
 							</div>
 							<hr>
 							<div class="col-lg-24 col-md-24">
@@ -162,7 +162,7 @@ h9{
 							</div>
 							<hr>
 							<div class="col-lg-24 col-md-24">
-								<h8>Emily C.</h8><br>
+								<h8>Emily Clark</h8><br>
 								<h9>Event Coordinator</h9><br>
 								<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>!-->
 							</div>
