--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
 <meta name="description" content="">
 <meta name="author" content="M_Adnan">
 <title>Texas Crypto - Austin, TX</title>
+<link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,15 +62,16 @@
 		padding: 0 !important;
 	}
 	</style>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134233951-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'UA-134233951-1');
-	</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134233951-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-134233951-1');
+		</script>
 </head>
 <body>
 
@@ -87,7 +90,7 @@
     <div class="container">
 
       <!-- Logo -->
-      <div class="logo"> <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="" ></a> </div>
+      <div class="logo"> <a href="index.html"><img class="img-responsive" src="images/txc-logo-v2.png" alt="" ></a> </div>
       <nav class="navbar ownmenu navbar-expand-lg ">
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span><i class="fas fa-bars"></i></span> </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -116,21 +119,13 @@
 
           <!-- Left Section -->
           <div class="col-md-7">
-            <h1 style="font-size: 48px; font-weight: 700;">Texas Crypto</h1>
-			<h1 style="font-size: 28px;">vires numeris</h1>
+            <h1 style="font-size: 80px; font-weight: 700;">Texas Crypto</h1>
+			<h1 style="font-size: 28px;">Changing the world one block at a time</h1>
 						<a href="#about" class="btn">Learn more</a>
             <a href="https://utexas.campuslabs.com/engage/organization/texascrypto" class="btn btn-inverse">Join</a> </div>
 
-          <!-- Text Section -->
-          <div class="col-md-5">
-            <div class="distri">
-              <h6>Call us any time to schedule an appointment or chat</h6>
-              <!-- Progress -->
-              <div class="progress">
-				  <p style="margin-left: 42px; margin-top: 2px; color: black; font-weight: 700;"><a href="tel:2814755914">+1 (281) 475-5914</a></p>
-              </div>
-            </div>
-          </div>
+         <!-- Text Section -->
+
         </div>
       </div>
     </div>
@@ -170,7 +165,7 @@
             <div class="ib-icon"> <i class="flaticon-smartphone"></i> </div>
             <div class="ib-info">
               <h4 class="h6">Students</h4>
-              <p>Whether you are an entrepreneur looking to scale a startup idea, a developer looking for a community to share ideas with, or a student intrigued by the workings of Blockchain technology, we encourage you to reach out, share your thoughts, and <a href="https://utexas.campuslabs.com/engage/organization/texascrypto" target="_blank">join</a> our outstanding community of developers and enthusiasts.</p>
+              <p>Whether you are an entrepreneur looking to scale a startup idea, a developer looking for a community to share ideas with, or a student intrigued by the workings of Blockchain technology, we encourage you to reach out, share your thoughts, and <a href="https://utexas.campuslabs.com/engage/organization/texascrypto">join</a> our outstanding community of developers and enthusiasts.</p>
             </div>
           </div>
 
@@ -179,7 +174,7 @@
             <div class="ib-icon"> <i class="flaticon-flat-world-map"></i> </div>
             <div class="ib-info">
               <h4 class="h6">Companies & SMBs</h4>
-              <p>If you are a business looking to modernize/secure your day-to-day operations and are considering the implementation of a Blockchain-based solution, consult us at <a href="mailto:contact@texascrypto.org" target="_blank">contact@texascrypto.org</a>, and we will draw out a plan/business model best suited for your specific business. We look forward to the challenges and opportunities of exploring the frontier of Blockchain application in all types of businesses, especially startups and SMBs.</p>
+              <p>If you are a business looking to modernize/secure your day-to-day operations and are considering the implementation of a Blockchain-based solution, consult us at <a href="mailto:contact@texascrypto.org">contact@texascrypto.org</a>, and we will draw out a plan/business model best suited for your specific business. We look forward to the challenges and opportunities of exploring the frontier of Blockchain application in all types of businesses, especially startups and SMBs. </p>
             </div>
           </div>
       </div>
@@ -336,7 +331,7 @@
 			          <a href="http://makro.id/sistem-oss-resmi-diluncurkan" class="align-self-end">
 			        	<span class="badge">Industri</span>
 			            <h4 class="card-title">Sistem OSS Resmi Diluncurkan</h4>
-			            <p class="textfeat" style="display: none;">makro.id - Menteri Koordinator Bidang Perekonomian Darmin Nasution bersama dengan para menteri dan kepala lembaga terkait meresmikan penerapan Sistem Online Single Submission (OSS). 
+			            <p class="textfeat" style="display: none;">makro.id - Menteri Koordinator Bidang Perekonomian Darmin Nasution bersama dengan para menteri dan kepala lembaga terkait meresmikan penerapan Sistem Online Single Submission (OSS).
 
 	Layanan Perizinan Berusaha Terintegrasi Secara Elektronik (PBTSE), yang</p>
 			          </a>
@@ -433,7 +428,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <div class="sm-intro">
+            <!-- <div class="sm-intro">
               <h2>Join our organization</h2>
               <ul class="socials">
                 <li><a href="#."><i class="fab fa-facebook-f"></i></a></li>
@@ -444,13 +439,13 @@
                 <li><a href="#."><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="#."><i class="fab fa-youtube"></i></a></li>
-              </ul>
+              </ul>  -->
             </div>
           </div>
           <div class="col">
             <div class="news-letter">
               <h2>Stay updated on our events and news</h2>
-              <form>
+              <form action="/contact.html" method="GET">
                 <input type="email" placeholder="Enter your email address" required>
                 <button type="submit">SEND</button>
               </form>
