--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="M_Adnan">
 <title>Texas Crypto - Projects</title>
-
+<link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -15,7 +15,7 @@
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
 <link href="fonts/flaticon.css" rel="stylesheet">
-
+<link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 <!-- JavaScripts -->
 <script src="js/modernizr.js"></script>
 <style>
@@ -155,24 +155,9 @@ h9{
       <div class="container">
         <div class="row">
           <div class="col">
-            <div class="sm-intro">
-              <h2>Join our organization</h2>
-              <ul class="socials">
-                <li><a href="#."><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#."><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#."><i class="fab fa-github"></i></a></li>
-                <li><a href="#."><i class="fab fa-telegram"></i></a></li>
-                <li><a href="#."><i class="fab fa-gitter"></i></a></li>
-                <li><a href="#."><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#."><i class="fab fa-youtube"></i></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col">
             <div class="news-letter">
               <h2>Stay updated on our events and news</h2>
-              <form>
+              <form action="/contact.html" method="GET">
                 <input type="email" placeholder="Enter your email address" required="">
                 <button type="submit">SEND</button>
               </form>
