--- a/index.html
+++ b/index.html
@@ -11349,88 +11349,84 @@
                         <div id="root"></div>
                       </div>
                     </div>
-                    <div class="mobileHide et_pb_column et_pb_column_1_1 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough et-last-child" style="min-width: 340px;">
+                    <div class="mobileHide et_pb_column et_pb_column_1_1 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough et-last-child" style="min-width: 340px;min-height: 816px;">
                       <div class="et_pb_module et_pb_text et_pb_text_5 winkle-text  et_pb_text_align_left et_pb_bg_layout_light">
                         <div class="et_pb_text_inner">
-                          <h3>
-                            <span class="vision-underline">How do you mint Chummies?</span>
-                          </h3>
+                            <h3>
+                                <span class="vision-underline">How to Chummy Effectively</span><span style="font-size: 22px;/* margin-left: 151px; */float: right;margin-right: 19px;"><a href="https://www.loom.com/share/326280b8bfd640a2b86a73c141c88882" target="_blank" style="color: #69c3ff;text-shadow: 0.5px 0.5px rgb(0 0 0 / 55%);text-decoration: underline #d5b0c0;">mint tutorial</a></span>
+                              </h3>
                         </div>
                       </div>
-                      <div class="content-desktop mobileHide et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light">
+                      <div class="content-desktop mobileHide et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light" style="font-size: 15pt;">
                         <div class="et_pb_text_inner">
                           <div class="flex flex-col gap-6">
                             <div class="flex">
-                              <div class="">
-                                <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl">
-                                  1
-                                </div>
-                              </div>
                               <div class="flex flex-col text-base text-black">
-                                <p class="font-extrabold font-avenir-bold snip-p">
-                                    Connect your Wallet:
-                                </p>
+                                <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -9px; margin-bottom: 10px;">
+                                    Mint 1 Chummy
+                                </div>
                                 <p class="font-medium snip-p">
-                                  
-                                  
-                                    Click “Connect Wallet” and authorize connection in your wallet
-
+                                    <ul style="list-style-type: square;margin-left: 28px; margin-top: -20px;">
+                                        <li>Access to all real-life events such as our launch party headlined by <a href="https://chummyfinclub.com/blondish-partners-with-chummy-fin-club/">BLOND:ISH</a>, <a href="https://chummyfinclub.com/">ChummyCon</a>, and other real-life and virtual events.</li>
+                                        <li>You will also be eligible to receive funding for your Web3 project or startup.</li>
+                                    </ul>
                                 </p>
                               </div>
                             </div>
                             <div class="flex">
-                              <div class="">
-                                <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl">
-                                  2
+                                <div class="flex flex-col text-base text-black">
+                                  <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -5px; margin-bottom: 10px;">
+                                      Mint 3 Chummies
+                                  </div>
+                                  <p class="font-medium snip-p">
+                                    <ul style="list-style-type: square;margin-left: 28px; margin-top: -15px;">
+                                        <li>Get airdropped a 3D chummy for every 3 chummies you hodl (in multiples of 3)!</li>
+                                        <li>Access to the VIP lounge at every single chummy fin club event</li>
+                                        <li>VIP Hodlers chat</li>
+                                    </ul>
+                                    <!--<p style="margin-top: -25px;">Reach out to us and about getting access to our VIP Lounge at live events!</p>
+                                    <p style="margin-top: -25px;">Special whitelist spots for <a href="#societe">Societe's</a> pre-sale and future community partnerships</p>-->
+                                  </p>
                                 </div>
-                              </div>
-                              <div class="flex flex-col text-base text-black">
-                                <p class="font-extrabold font-avenir-bold snip-p">
-                                  Choose how many would you like to mint:
-                                </p>
-                                <p class="font-medium snip-p">
-                                    For presale you may mint 10 chummies per wallet. For public sale you may mint 10 chummies per transaction and unlimited per wallet.
-                                </p>
-                              </div>
                             </div>
+                            <!--
                             <div class="flex">
-                              <div class="">
-                                <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl">
-                                  3
+                                <div class="flex flex-col text-base text-black">
+                                  <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -21px; margin-bottom: 10px;">
+                                      Mint 5 Chummies
+                                  </div>
+                                  <p class="font-medium snip-p">
+                                    <p style="margin-top: -18px;">Membership Access to <a href="#societe">Societe's</a> Private Sale</p>
+                                  </p>
                                 </div>
-                              </div>
-                              <div class="flex flex-col text-base text-black">
-                                <p class="font-extrabold font-avenir-bold snip-p">
-                                  Confirm in your wallet:
-                                </p>
-                                <p class="font-medium snip-p">
-                                  You have to have enough ETH in your wallet to cover ‘Max gas fees’ + mint cost, check FAQ.
-                                </p>
-                              </div>
-                            </div>
+                            </div>-->
                             <div class="flex">
-                              <div class="">
-                                <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl">
-                                  4
+                                <div class="flex flex-col text-base text-black">
+                                  <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 180px; margin-top: -23px; padding-top: 1px; padding-bottom: 1px; margin-bottom: 10px;">
+                                      Mint 10 Chummies
+                                  </div>
+                                  <p class="font-medium snip-p">
+                                    <!--
+                                    <p style="margin-top: -18px;">A free <a href="#societe">Societe</a> NFT (worth 0.5 to 1 ETH) will be airdropped to you for <b>FREE</b>!!</p>
+                                    <p style="margin-top: -25px;">Societe NFT HODLers will get:</p>
+                                    <ul style="list-style-type: square;margin-left: 28px; margin-top: -15px;">
+                                        <li>Access to special events like the <span>UNICEF GALA<span>, <span>Paris Fashion Week<span>, <span>NYFY<span>, <span>F1 races<span>, <span>NYE parties<span> in <span>St. Barth<span>, <span>Aspen<span>, <span>Tulum<span>, & much more.</li>
+                                        <li>Access to the Founders Table, private dinners, bottle service, and the DJ Booth! With <a href="https://www.instagram.com/blondish">@BLOND:ISH</a> at our launch party!</li>
+                                    </ul>
+                                  </p>-->
+                                  <ul style="list-style-type: square;margin-left: 28px; margin-top: 5px;">
+                                        <li>Access to the <a href="www.chummyfinclub.com">Fincubator Fellowship</a> (consists of group mentorship, office hours for 1:1 mentorship, </li>
+                                        <li>Access to the Founder's table at all events and invites to private dinners with the founders</li>
+                                        <li>Access to DJ booth during the launch party</li>
+                                        <li>Bottle Service at our parties and events</li>
+                                    </ul>
                                 </div>
-                              </div>
-                              <div class="flex flex-col text-base text-black">
-                                <p class="font-extrabold font-avenir-bold snip-p">
-                                  If you receive an error, or very high fees in your Metamask:
-                                </p>
-                                <p class="font-medium snip-p">
-                                  <a href="#readfaq">Read FAQ</a>, &nbsp;<a href="/">Reload Page</a>, &nbsp;or Disable Adblock or Shields.
-                                </p>
-                              </div>
                             </div>
                           </div>
                         </div>
-                      </div>
-                      <!--<div class="et_pb_button_module_wrapper et_pb_button_1_wrapper  et_pb_module ">
-                        <a class="et_pb_button et_pb_button_1 scroll-trigger-waypoint et_pb_bg_layout_light" href="https://chummyfinclub.com/about-the-chummy-fin-club/">Read More</a>
-                      </div>-->
-                      <div class="content-desktop mobileHide countdown">
-                        <div id="countDown"></div>
+                        <div class="content-desktop mobileHide countdown">
+                            <div id="countDown"></div>
+                          </div>
                       </div>
                     </div>
                   </div>
@@ -11454,6 +11450,13 @@
                                 While we support most popular wallets, we highly recommend MetaMask for a seamless experience. Coinbase, WalletConnect has been tested and found to be working, but sometimes encounter errors for specific users due to new updates. In such cases, the best place to find support is their community forums or Discord.
                             </div>
                           </div>
+                          <!--
+                          <div id="#societe" class="acc__card">
+                            <div class="acc__title">What is Societe?</div>
+                            <div class="acc__panel">
+                                The presale max mint limit is 10 NFTs per wallet and per transaction. The public sale max mint is 10 NFTs per transaction and unlimited per wallet.
+                            </div>
+                          </div>-->
                           <div class="acc__card">
                             <div class="acc__title">How many Chummy NFTs can I mint?</div>
                             <div class="acc__panel">
@@ -14007,7 +14010,7 @@
     t()
   }([])
 </script>
-<script src="/static/js/2.81da4d86.chunk.js"></script><script src="/static/js/main.879aa683.chunk.js"></script>
+<script src="/static/js/2.81da4d86.chunk.js"></script><script src="/static/js/main.ece94881.chunk.js"></script>
 <script src="/static/js/mint.js"></script>
 <script src="/static/js/notify.min.js"></script>
 </body>
